# decoding-explorer

./: .gitignore  align_arrays.py  bead_finding.py  image_processing.py  main.py  pyproject.toml  requirements.txt  roi_tester.py  test_bead.csv  utils.py
model/: file_item.py  settings.py  status_enum.py
view/: FileListWidget.py  MainWindow.py  MetadataView.py  roi_inspector.py
viewmodel/: file_manager_vm.py  metadata_vm.py
