[project]
name = "decoding-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pip>=25.1.1",
    "psutil>=7.0.0",
    "pyqt6>=6.9.1",
    "pyside6>=6.5.0",
    "pystackreg>=0.2.8",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "tifffile>=2025.5.10",
]
