[project]
name = "decoding-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astroalign>=2.6.1",
    "csbdeep>=0.8.1",
    "diplib>=3.5.2",
    "itk-elastix==0.23.0",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "psutil>=7.0.0",
    "pyqt6>=6.9.1",
    "pyside6>=6.5.0",
    "pystackreg>=0.2.8",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "simpleitk>=2.5.2",
    "tifffile>=2025.5.10",
]
